documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned char BYTE;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long HVL;
typedef unsigned long * LPHVL;
typedef unsigned long HSCHED;
typedef unsigned long * LPHSCHED;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int * LPBOOL;
typedef int HCARD;
typedef int ERRVAL;
    typedef struct
    {
        BYTE data[6];
    } ADDRESS;
typedef ADDRESS * LPADDRESS;

AX1W32API ERRVAL __stdcall AX1_RPC_VLGetFactor(LPINT pfactor0,LPINT pfactor1,LPINT pfactor2,LPINT pfactor3,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLGetHandle(USHORT netid,USHORT vlid,LPHVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLGetHandleMAC(USHORT netid,LPADDRESS pmacdst,LPHVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLGetInfo(HVL hvl,LPUSHORT vlid,LPADDRESS pmacdst,LPADDRESS pmacsrc,LPULONG pconfigval,LPULONG ipdst,LPULONG ipsrc,LPULONG bag_us,LPULONG skewmax,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLGetJitter(BOOL bReset,LPULONG pJitA,LPULONG pJitB,LPULONG pMaxJitA,LPULONG pMaxJitB,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLGetNext(USHORT netid,LPUSHORT nextVL,USHORT lastVL,USHORT flag,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLGetNextMAC(USHORT netid,LPADDRESS nextMAC,ADDRESS lastMAC,USHORT flag,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLGetPortCount(HVL hvl,LPUSHORT portcnt,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLSetConfig(ULONG configval,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLSetFactor(INT factor0,INT factor1,INT factor2,INT factor3,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedBuildEx(INT vlcount,LPBOOL vlrobins,LPHVL hvls,LPINT vlperiods_us,LPINT vlfactors,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedCalc(USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedClear(USHORT netid,HCARD handleval);

AX1W32API VOID __stdcall AX1_SchedDebug(BOOL debug);

AX1W32API ERRVAL __stdcall AX1_SchedDoFrameEnd(ULONG frametime_us,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedDoFrameInsert(INT index,HSCHED hsub,HVL hvl,ULONG frametime_us,ULONG eventindex,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedDoFrameStart(ULONG frametime_us,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedDoRobinEnd(HSCHED hsub,HSCHED hrobin,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedDoRobinInsert(HSCHED hsub,HSCHED hrobin,INT index,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedDoRobinStart(LPHSCHED phsub,LPHSCHED phrobin,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedDoSchedEnd(USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedDoSchedStart(USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedDoSubVLEnd(HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedDoSubVLInsert(HSCHED hsub,LPHSCHED hrobins,ULONG eventindex,ULONG preveventindex,INT index,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedDoSubVLStart(LPHSCHED phsub,LPHSCHED hrobins,LPINT vlfactors,LPINT vlmods,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedFactor(LPHSCHED phsub,LPINT vlfactors,HVL hvl,HCARD handleval);

AX1W32API ULONG __stdcall AX1_SchedMaxval(LPULONG array,ULONG arraycount);

AX1W32API ULONG __stdcall AX1_SchedMinval(LPULONG array,ULONG arraycount);

AX1W32API VOID __stdcall AX1_SchedModval(LPINT vlfactors,LPINT vlmods);

AX1W32API INT __stdcall AX1_SeqDMARd(LPBYTE bufptr,LPULONG bufcountptr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SeqDMARdEx(LPBYTE bufptr,LPULONG bufcountptr,LPINT reccountptr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SeqGetConfig(LPULONG pconfigval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SeqRdEx(LPBYTE bufptr,LPULONG bufcountptr,LPINT reccountptr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SeqSetConfig(ULONG configval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SeqStatusEx(LPUSHORT statusptr,LPULONG headptr,LPULONG tailptr,LPULONG configptr,HCARD handleval);

AX1W32API ULONG __stdcall AX1_Shl(ULONG dataval,INT cntval);

AX1W32API ULONG __stdcall AX1_Shr(ULONG dataval,INT cntval);

AX1W32API USHORT __stdcall AX1_SignMant(LPCSTR str);

AX1W32API USHORT __stdcall AX1_Transpose12(USHORT val);

AX1W32API INT __stdcall AX1_ValAsciiCmpi(LPSTR str1,LPSTR str2);

AX1W32API LPSTR __stdcall AX1_ValAsciiCpy(LPSTR strdest,LPCSTR strsrc,INT count);

AX1W32API VOID __stdcall AX1_ValAsciiTrimLead(LPSTR buf);

AX1W32API VOID __stdcall AX1_ValAsciiTrimTrail(LPSTR buf);

AX1W32API ULONG __stdcall AX1_ValFromAscii(LPCSTR asciistr,INT radixval);

AX1W32API ULONG __stdcall AX1_ValGetBits(ULONG oldvalue,INT startbit,INT endbit);

AX1W32API LPSTR __stdcall AX1_ValIncAscii(LPSTR asciistr);

AX1W32API LPSTR __stdcall AX1_ValInccAscii(LPSTR asciistr);

AX1W32API BOOL __stdcall AX1_ValIsLower(INT value);

AX1W32API INT __stdcall AX1_ValLenAscii(INT numbits,INT radixval);

AX1W32API ULONG __stdcall AX1_ValPutBits(ULONG oldvalue,ULONG newfld,INT startbit,INT endbit);

AX1W32API LPSTR __stdcall AX1_ValToAscii(ULONG value,LPSTR asciistr,INT numbits,INT radixval);

AX1W32API INT __stdcall AX1_ValToUpper(INT value);

AX1W32API ERRVAL __stdcall AX1_VLConfigEx(ULONG configval,USHORT vlid,ULONG bag_us,ULONG skewmax,LPHVL hvl,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLConfigExx(ULONG configval,USHORT vlid,ADDRESS macsrc,ULONG ipdst,ULONG ipsrc,ULONG bag_us,ULONG skewmax,LPHVL hvl,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLConfigMACEx(ULONG configval,ADDRESS macdst,ULONG bag_us,ULONG skewmax,LPHVL hvl,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLConfigMACExx(ULONG configval,ADDRESS macdst,ADDRESS macsrc,ULONG ipdst,ULONG ipsrc,ULONG bag_us,ULONG skewmax,LPHVL hvl,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLGetConfig(LPULONG pconfigval,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLGetFactors(LPINT pfactor0,LPINT pfactor1,LPINT pfactor2,LPINT pfactor3,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLGetInfoEx(LPULONG configval,LPUSHORT vlid,LPADDRESS pmacdst,LPADDRESS pmacsrc,LPULONG ipdst,LPULONG ipsrc,LPULONG bag_us,LPULONG skew,HVL hvl,HCARD handleval);

AX1W32API BOOL __stdcall AX1_VLIsHostRcv(HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLSetConfig(ULONG configval,HVL hvl,HCARD handleval);