documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32VB.BAS

Public Declare Function AX1_RPC_VLGetFactor Lib "AX1W32.DLL" Alias "_AX1_RPC_VLGetFactor@24" (ByRef pfactor0 As Long, ByRef pfactor1 As Long, ByRef pfactor2 As Long, ByRef pfactor3 As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_VLGetHandle Lib "AX1W32.DLL" Alias "_AX1_RPC_VLGetHandle@16" (ByVal netid As Integer, ByVal vlid As Integer, ByRef hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_VLGetHandleMAC Lib "AX1W32.DLL" Alias "_AX1_RPC_VLGetHandleMAC@16" (ByVal netid As Integer, ByRef pmacdst As ADDRESS, ByRef hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_VLGetInfo Lib "AX1W32.DLL" Alias "_AX1_RPC_VLGetInfo@40" (ByVal hvl As Long, ByRef vlid As Integer, ByRef pmacdst As ADDRESS, ByRef pmacsrc As ADDRESS, ByRef pconfigval As Long, ByRef ipdst As Long, ByRef ipsrc As Long, ByRef bag_us As Long, ByRef skewmax As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_VLGetJitter Lib "AX1W32.DLL" Alias "_AX1_RPC_VLGetJitter@28" (ByVal bReset As Long, ByRef pJitA As Long, ByRef pJitB As Long, ByRef pMaxJitA As Long, ByRef pMaxJitB As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_VLGetNext Lib "AX1W32.DLL" Alias "_AX1_RPC_VLGetNext@20" (ByVal netid As Integer, ByRef nextVL As Integer, ByVal lastVL As Integer, ByVal flag As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_VLGetNextMAC Lib "AX1W32.DLL" Alias "_AX1_RPC_VLGetNextMAC@24" (ByVal netid As Integer, ByRef nextMAC As ADDRESS, ByVal lastMAC As ADDRESS, ByVal flag As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_VLGetPortCount Lib "AX1W32.DLL" Alias "_AX1_RPC_VLGetPortCount@12" (ByVal hvl As Long, ByRef portcnt As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_VLSetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_VLSetConfig@12" (ByVal configval As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_VLSetFactor Lib "AX1W32.DLL" Alias "_AX1_RPC_VLSetFactor@24" (ByVal factor0 As Long, ByVal factor1 As Long, ByVal factor2 As Long, ByVal factor3 As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedBuildEx Lib "AX1W32.DLL" Alias "_AX1_SchedBuildEx@28" (ByVal vlcount As Long, ByRef vlrobins As Long, ByRef hvls As Long, ByRef vlperiods_us As Long, ByRef vlfactors As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedCalc Lib "AX1W32.DLL" Alias "_AX1_SchedCalc@8" (ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedClear Lib "AX1W32.DLL" Alias "_AX1_SchedClear@8" (ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Sub AX1_SchedDebug Lib "AX1W32.DLL" Alias "_AX1_SchedDebug@4" (ByVal debugval As Long)
Public Declare Function AX1_SchedDoFrameEnd Lib "AX1W32.DLL" Alias "_AX1_SchedDoFrameEnd@12" (ByVal frametime_us As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedDoFrameInsert Lib "AX1W32.DLL" Alias "_AX1_SchedDoFrameInsert@28" (ByVal index As Long, ByVal hsub As Long, ByVal hvl As Long, ByVal frametime_us As Long, ByVal eventindex As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedDoFrameStart Lib "AX1W32.DLL" Alias "_AX1_SchedDoFrameStart@12" (ByVal frametime_us As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedDoRobinEnd Lib "AX1W32.DLL" Alias "_AX1_SchedDoRobinEnd@16" (ByVal hsub As Long, ByVal hrobin As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedDoRobinInsert Lib "AX1W32.DLL" Alias "_AX1_SchedDoRobinInsert@20" (ByVal hsub As Long, ByVal hrobin As Long, ByVal index As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedDoRobinStart Lib "AX1W32.DLL" Alias "_AX1_SchedDoRobinStart@16" (ByRef phsub As Long, ByRef phrobin As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedDoSchedEnd Lib "AX1W32.DLL" Alias "_AX1_SchedDoSchedEnd@8" (ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedDoSchedStart Lib "AX1W32.DLL" Alias "_AX1_SchedDoSchedStart@8" (ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedDoSubVLEnd Lib "AX1W32.DLL" Alias "_AX1_SchedDoSubVLEnd@8" (ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedDoSubVLInsert Lib "AX1W32.DLL" Alias "_AX1_SchedDoSubVLInsert@28" (ByVal hsub As Long, ByRef hrobins As Long, ByVal eventindex As Long, ByVal preveventindex As Long, ByVal index As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedDoSubVLStart Lib "AX1W32.DLL" Alias "_AX1_SchedDoSubVLStart@24" (ByRef phsub As Long, ByRef hrobins As Long, ByRef vlfactors As Long, ByRef vlmods As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedFactor Lib "AX1W32.DLL" Alias "_AX1_SchedFactor@16" (ByRef phsub As Long, ByRef vlfactors As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedMaxval Lib "AX1W32.DLL" Alias "_AX1_SchedMaxval@8" (ByRef arrayval As Long, ByVal arraycount As Long) As Long
Public Declare Function AX1_SchedMinval Lib "AX1W32.DLL" Alias "_AX1_SchedMinval@8" (ByRef arrayval As Long, ByVal arraycount As Long) As Long
Public Declare Sub AX1_SchedModval Lib "AX1W32.DLL" Alias "_AX1_SchedModval@8" (ByRef vlfactors As Long, ByRef vlmods As Long)
Public Declare Function AX1_SeqDMARd Lib "AX1W32.DLL" Alias "_AX1_SeqDMARd@12" (ByRef bufptr As Byte, ByRef bufcountptr As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_SeqDMARdEx Lib "AX1W32.DLL" Alias "_AX1_SeqDMARdEx@16" (ByRef bufptr As Byte, ByRef bufcountptr As Long, ByRef reccountptr As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_SeqGetConfig Lib "AX1W32.DLL" Alias "_AX1_SeqGetConfig@8" (ByRef pconfigval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_SeqRdEx Lib "AX1W32.DLL" Alias "_AX1_SeqRdEx@16" (ByRef bufptr As Byte, ByRef bufcountptr As Long, ByRef reccountptr As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_SeqSetConfig Lib "AX1W32.DLL" Alias "_AX1_SeqSetConfig@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_SeqStatusEx Lib "AX1W32.DLL" Alias "_AX1_SeqStatusEx@20" (ByRef statusptr As Integer, ByRef headptr As Long, ByRef tailptr As Long, ByRef configptr As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_Shl Lib "AX1W32.DLL" Alias "_AX1_Shl@8" (ByVal dataval As Long, ByVal cntval As Long) As Long
Public Declare Function AX1_Shr Lib "AX1W32.DLL" Alias "_AX1_Shr@8" (ByVal dataval As Long, ByVal cntval As Long) As Long
Public Declare Function AX1_SignMant Lib "AX1W32.DLL" Alias "_AX1_SignMant@4" (ByVal str As String) As Integer
Public Declare Function AX1_Transpose12 Lib "AX1W32.DLL" Alias "_AX1_Transpose12@4" (ByVal val As Integer) As Integer
Public Declare Function AX1_ValAsciiCmpi Lib "AX1W32.DLL" Alias "_AX1_ValAsciiCmpi@8" (ByVal str1 As String, ByVal str2 As String) As Long
Public Declare Function AX1_ValAsciiCpy Lib "AX1W32.DLL" Alias "_AX1_ValAsciiCpy@12" (ByVal strdest As String, ByVal strsrc As String, ByVal count As Long) As String
Public Declare Sub AX1_ValAsciiTrimLead Lib "AX1W32.DLL" Alias "_AX1_ValAsciiTrimLead@4" (ByVal buf As String)
Public Declare Sub AX1_ValAsciiTrimTrail Lib "AX1W32.DLL" Alias "_AX1_ValAsciiTrimTrail@4" (ByVal buf As String)
Public Declare Function AX1_ValFromAscii Lib "AX1W32.DLL" Alias "_AX1_ValFromAscii@8" (ByVal asciistr As String, ByVal radixval As Long) As Long
Public Declare Function AX1_ValGetBits Lib "AX1W32.DLL" Alias "_AX1_ValGetBits@12" (ByVal oldvalue As Long, ByVal startbit As Long, ByVal endbit As Long) As Long
Public Declare Function AX1_ValIncAscii Lib "AX1W32.DLL" Alias "_AX1_ValIncAscii@4" (ByVal asciistr As String) As String
Public Declare Function AX1_ValInccAscii Lib "AX1W32.DLL" Alias "_AX1_ValInccAscii@4" (ByVal asciistr As String) As String
Public Declare Function AX1_ValIsLower Lib "AX1W32.DLL" Alias "_AX1_ValIsLower@4" (ByVal value As Long) As Long
Public Declare Function AX1_ValLenAscii Lib "AX1W32.DLL" Alias "_AX1_ValLenAscii@8" (ByVal numbits As Long, ByVal radixval As Long) As Long
Public Declare Function AX1_ValPutBits Lib "AX1W32.DLL" Alias "_AX1_ValPutBits@16" (ByVal oldvalue As Long, ByVal newfld As Long, ByVal startbit As Long, ByVal endbit As Long) As Long
Public Declare Function AX1_ValToAscii Lib "AX1W32.DLL" Alias "_AX1_ValToAscii@16" (ByVal value As Long, ByVal asciistr As String, ByVal numbits As Long, ByVal radixval As Long) As String
Public Declare Function AX1_ValToUpper Lib "AX1W32.DLL" Alias "_AX1_ValToUpper@4" (ByVal value As Long) As Long
Public Declare Function AX1_VLConfigEx Lib "AX1W32.DLL" Alias "_AX1_VLConfigEx@28" (ByVal configval As Long, ByVal vlid As Integer, ByVal bag_us As Long, ByVal skewmax As Long, ByRef hvl As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_VLConfigExx Lib "AX1W32.DLL" Alias "_AX1_VLConfigExx@44" (ByVal configval As Long, ByVal vlid As Integer, ByVal macsrc As ADDRESS, ByVal ipdst As Long, ByVal ipsrc As Long, ByVal bag_us As Long, ByVal skewmax As Long, ByRef hvl As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_VLConfigMACEx Lib "AX1W32.DLL" Alias "_AX1_VLConfigMACEx@32" (ByVal configval As Long, ByVal macdst As ADDRESS, ByVal bag_us As Long, ByVal skewmax As Long, ByRef hvl As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_VLConfigMACExx Lib "AX1W32.DLL" Alias "_AX1_VLConfigMACExx@48" (ByVal configval As Long, ByVal macdst As ADDRESS, ByVal macsrc As ADDRESS, ByVal ipdst As Long, ByVal ipsrc As Long, ByVal bag_us As Long, ByVal skewmax As Long, ByRef hvl As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_VLGetConfig Lib "AX1W32.DLL" Alias "_AX1_VLGetConfig@12" (ByRef pconfigval As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_VLGetFactors Lib "AX1W32.DLL" Alias "_AX1_VLGetFactors@24" (ByRef pfactor0 As Long, ByRef pfactor1 As Long, ByRef pfactor2 As Long, ByRef pfactor3 As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_VLGetInfoEx Lib "AX1W32.DLL" Alias "_AX1_VLGetInfoEx@40" (ByRef configval As Long, ByRef vlid As Integer, ByRef pmacdst As ADDRESS, ByRef pmacsrc As ADDRESS, ByRef ipdst As Long, ByRef ipsrc As Long, ByRef bag_us As Long, ByRef skew As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_VLIsHostRcv Lib "AX1W32.DLL" Alias "_AX1_VLIsHostRcv@8" (ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_VLSetConfig Lib "AX1W32.DLL" Alias "_AX1_VLSetConfig@12" (ByVal configval As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
